--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -3,7 +3,7 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   background-color: #323232;
   color: white;
   list-style: none;
