--- a/src/css/FighterDetails.module.css
+++ b/src/css/FighterDetails.module.css
@@ -9,12 +9,24 @@
   display: flex;
   background-color: #e2e2e2;
   width: 70vw;
-  height: 60vh;
+  height: 50vh;
   margin-left: 15vw;
+  justify-content: space-around;
+}
+
+.favourite {
+  cursor: pointer;
+  height: 45px;
+  margin-top: 1em;
 }
 
 .profil {
-  margin: 3em;
+  margin: 3em 3em 3em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: auto;
 }
 
 .imageFighter {
@@ -32,10 +44,10 @@
 
 .infos {
   margin: 3em;
-  width: 30vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
 }
 .statsList {
   text-align: justify;
@@ -48,4 +60,8 @@
   transform: skew(-18deg);
   font-weight: bold;
   padding: 1rem;
+}
+
+.stats {
+  margin: 1rem;
 }
