--- a/src/css/AllGladiator.module.css
+++ b/src/css/AllGladiator.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  min-width: 40.5rem;
+  width: 40.5rem;
   max-height: 30rem;
 }
 
