--- a/src/css/HeaderLogo.module.css
+++ b/src/css/HeaderLogo.module.css
@@ -4,4 +4,10 @@
   justify-content: space-around;
   align-items: center;
   font-size: 2rem;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.imgLogo {
+  margin-right: 1em;
 }
