--- a/src/css/FavoriteGladiator.module.css
+++ b/src/css/FavoriteGladiator.module.css
@@ -1,5 +1,5 @@
 .favCard {
-  background-color: #df2e2f;
+  background-color: #cc9d56;
   border-radius: 5px;
   color: white;
   font-family: 'Open Sans', sans-serif;
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem;
+  margin-top: 4rem;
+  margin-left: 2rem;
 }
 
 .favTitleBloc {
@@ -28,6 +29,7 @@
   margin: 1.4rem 0;
   height: 13rem;
   border-radius: 5px;
+  border-radius: 100%;
 }
 
 .gladiatorName {
