--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -1,10 +1,10 @@
 .footer {
   height: 12vh;
-  position: fixed;
+  position: bottom;
   left: 0;
   bottom: 0;
   width: 100vw;
-  background-color: #323232;
+  background-color: #cc9d56;
   color: white;
   list-style: none;
   display: flex;
