--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -4,6 +4,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 8em 0 8em;
-  background-color: #df2e2f;
+  background-color: #CC9D56;
   color: white;
 }
