--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -3,18 +3,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 78vh;
+  height: 100%;
+  margin-top: 4rem;
 }
 
 .wrapperFighters {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 3rem;
+  align-items: center;
 }
 
 .wrapperProfileTitle {
   text-transform: uppercase;
   color: #fff;
-  background-color: #df2e2f;
+  background-color: #cc9d56;
   padding: 1rem;
   transform: skew(-18deg);
   max-width: 18rem;
