--- a/src/css/FighterDetails.module.css
+++ b/src/css/FighterDetails.module.css
@@ -3,11 +3,12 @@
   flex-direction: column;
   font-family: 'Open Sans', sans-serif;
   margin-top: 5em;
+  height: 70vh;
 }
 
 .fighterCard {
   display: flex;
-  background-color: #fafafa;
+  background-color: #cc9d56;
   width: 70vw;
   height: 50vh;
   margin-left: 15vw;
@@ -60,13 +61,21 @@
   flex-direction: column;
   align-items: center;
   align-self: center;
+  background-color: #323232;
+  color: #e2e2e2;
+  width: 30vw;
+  height: 95%;
+  border-radius: 5px;
 }
 .statsList {
   text-align: justify;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .rating {
-  background-color: #323232;
+  background-color: #cc9d56;
   color: #e2e2e2;
   width: 10vw;
   transform: skew(-18deg);
@@ -76,4 +85,11 @@
 
 .stats {
   margin: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0;
+}
+.statsTitle {
+  margin-bottom: 0;
 }
