--- a/src/css/FighterDetails.module.css
+++ b/src/css/FighterDetails.module.css
@@ -8,7 +8,7 @@
 
 .fighterCard {
   display: flex;
-  background-color: #cc9d56;
+  background-color: #e2e2e2;
   width: 70vw;
   height: 50vh;
   margin-left: 15vw;
