--- a/src/css/FighterDetails.module.css
+++ b/src/css/FighterDetails.module.css
@@ -31,18 +31,16 @@
 }
 
 .imageFighter {
-  max-width: 15vw;
+  max-width: 14vw;
   position: absolute;
   z-index: 1;
   border-radius: 1000px;
-  border: #323232;
-  border: solid;
-  border-width: 0.5rem;
+  border: 0.5rem solid #CC9D56;
 }
 .palme {
   max-width: 21vw;
   z-index: 3;
-  transform: translateY(-2.7rem);
+  transform: translateY(-1.7rem);
 }
 .name {
   background-color: #323232;
