--- a/src/css/Fight.module.css
+++ b/src/css/Fight.module.css
@@ -3,10 +3,21 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  width: 30vw;
-  height: 6vh;
+  width: 60vw;
+  height: 25vh;
   background-color: #323232;
   color: white;
-  transform: skew(-18deg);
+  margin: 1em;
+}
+
+.containerActive {
+  background-color: #ffff;
+  color: #323232;
+  margin: 1em;
+}
+
+.containerDisable {
+  background-color: #323232;
+  color: white;
   margin: 1em;
 }
