--- a/src/css/Fight.module.css
+++ b/src/css/Fight.module.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   align-items: center;
   width: 60vw;
-  height: 25vh;
+  height: 30vh;
   background-color: #323232;
   color: white;
   margin: 1em;
@@ -20,4 +20,26 @@
   background-color: #323232;
   color: white;
   margin: 1em;
+}
+
+.wrapperFighter {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+
+.fighter {
+  border-radius: 13rem;
+  height: 150px;
+}
+
+.btn {
+  height: 2em;
+  width: 7em;
+  transform: skew(-30deg);
+  background-color: #cc9d56;
+  border: none;
+  font-size: 1rem;
 }
