--- a/src/css/AllGladiator.module.css
+++ b/src/css/AllGladiator.module.css
@@ -4,10 +4,16 @@
   align-items: flex-end;
   width: 40.5rem;
   max-height: 30rem;
+  height: 50vh;
 }
 
 .wrapperProfile {
   display: flex;
   flex-wrap: wrap;
   flex: 1;
+}
+.pagination {
+  position: relative;
+  right: 18em;
+  margin-bottom: 0.5rem;
 }
