--- a/src/css/FighterDetails.module.css
+++ b/src/css/FighterDetails.module.css
@@ -3,14 +3,14 @@
   flex-direction: column;
   font-family: 'Open Sans', sans-serif;
   margin-top: 5em;
-  height: 68.8vh;
+  height: 70vh;
 }
 
 .fighterCard {
   display: flex;
   background-color: #e2e2e2;
   width: 70vw;
-  height: 50vh;
+  height: 55vh;
   margin-left: 15vw;
   justify-content: space-around;
 }
@@ -87,7 +87,16 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0;
+  background-color: #e2e2e2;
+  color: #323232;
+  padding: 1em;
+  border-radius: 200px;
 }
 .statsTitle {
   margin-bottom: 0;
+}
+
+.abilities {
+  border-radius: 100px;
+  margin-right: 0.5rem;
 }
