--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 8em 0 8em;
-  background-color: #CC9D56;
+  padding: 0 3em 0 3em;
+  background-color: #cc9d56;
   color: white;
 }
