--- a/src/css/FighterDetails.module.css
+++ b/src/css/FighterDetails.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   font-family: 'Open Sans', sans-serif;
-  margin-top: 5em;
-  height: 70vh;
+  height: 78vh;
+  justify-content: center;
 }
 
 .fighterCard {
@@ -11,7 +11,7 @@
   background-color: #e2e2e2;
   border-radius: 5px;
   width: 70vw;
-  height: 60vh;
+  height: 30rem;
   margin-left: 15vw;
   justify-content: space-around;
 }
@@ -23,7 +23,7 @@
 }
 
 .profil {
-  margin: 5em 3em 3em 0;
+  margin: 7em 3em 3em 0;
   display: flex;
   flex-direction: column;
   align-items: center;
