--- a/src/css/Fight.module.css
+++ b/src/css/Fight.module.css
@@ -10,6 +10,10 @@
   margin: 1em;
 }
 
+.container:hover {
+  transition: all 500ms;
+}
+
 .containerActive {
   background-color: #ffff;
   color: #323232;
