--- a/src/css/PopUp.module.css
+++ b/src/css/PopUp.module.css
@@ -55,3 +55,10 @@
   font-weight: bold;
   font-size: 2rem;
 }
+
+.messageNotAvailable {
+  font-size: 2rem;
+  margin-top: 25%;
+  font-weight: bold;
+  color: #a61b27;
+}
